adjust project for java 17